--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         }
         .btn:active { transform: translateY(4px); box-shadow: none; }
         .btn-pizza { background: #e74c3c; color: white; box-shadow: 0 4px 0 #c0392b; }
+        .btn-spesa { background: #e74c3c; color: white; box-shadow: 0 4px 0 #c0392b; }
     </style>
 </head>
 <body>
@@ -22,6 +23,7 @@
     <h1>APP-CASUALI</h1>
 
     <a href="pizza/index.html" class="btn btn-pizza">🍕 Pizze</a>
+    <a href="spesa/index.html" class="btn btn-spesa">🍕 Spesa</a>
 
 </body>
 </html>
