--- a/spesa/index.html
+++ b/spesa/index.html
@@ -184,12 +184,34 @@
 
     // --- MAPPA ALLERGENI ESTESA (IL CERVELLO DI SICUREZZA) ---
     const riskMap = {
-        "Glutine": ["pane", "pasta", "farina", "biscotti", "cereali", "orzo", "farro", "kamut", "seitan", "pizza", "focaccia", "crostini", "pangrattato", "piadina", "malto", "segale"],
-        "Lattosio": ["latte", "yogurt", "formaggio", "mozzarella", "burro", "panna", "parmigiano", "ricotta", "mascarpone", "fiordilatte", "besciamella", "provola", "gorgonzola"],
-        "Uova": ["uova", "frittata", "mayonese", "crema", "carbonara", "pancakes", "meringa", "tiramisù", "albume", "tuorlo"],
-        "Pesce": ["pesce", "tonno", "merluzzo", "salmone", "sogliola", "gamberi", "cozze", "vongole", "acciughe", "crostacei", "molluschi", "spada", "calamari", "polpo"],
-        "Frutta a guscio": ["noci", "mandorle", "nocciole", "pistacchi", "anacardi", "arachidi", "pesto", "macadamia", "pinoli", "praline", "croccante", "nocciolata"],
-        "Diabete": ["zucchero", "miele", "cioccolato", "torta", "biscotti", "dolce", "marmellata", "succo", "sciroppo", "bevanda", "canditi", "brioche", "nutella", "caramello"]
+        "Glutine": [
+            "pane", "pasta", "farina", "biscotti", "cereali", "orzo", "farro", "kamut", "seitan", 
+            "pizza", "focaccia", "crostini", "pangrattato", "piadina", "malto", "segale", 
+            "spaghetti", "penne", "fusilli", "rigatoni", "lasagne", "tortellini", "ravioli", 
+            "couscous", "bulgur", "gnocchi", "tagliatelle", "pappardelle", "orecchiette", "cracker", "fette biscottate"
+        ],
+        "Lattosio": [
+            "latte", "yogurt", "formaggio", "mozzarella", "burro", "panna", "parmigiano", 
+            "ricotta", "mascarpone", "fiordilatte", "besciamella", "provola", "gorgonzola", 
+            "stracchino", "robbiola", "scamorza", "pecorino", "grana", "gelato", "crema"
+        ],
+        "Uova": [
+            "uova", "frittata", "mayonese", "crema", "carbonara", "pancakes", "meringa", 
+            "tiramisù", "albume", "tuorlo", "pan di spagna", "crepes", "zabaione"
+        ],
+        "Pesce": [
+            "pesce", "tonno", "merluzzo", "salmone", "sogliola", "gamberi", "cozze", 
+            "vongole", "acciughe", "crostacei", "molluschi", "spada", "calamari", "polpo", 
+            "orata", "branzino", "sarde", "gamberetti", "scampi"
+        ],
+        "Frutta a guscio": [
+            "noci", "mandorle", "nocciole", "pistacchi", "anacardi", "arachidi", "pesto", 
+            "macadamia", "pinoli", "praline", "croccante", "nocciolata", "marzapane", "granella"
+        ],
+        "Diabete": [
+            "zucchero", "miele", "cioccolato", "torta", "biscotti", "dolce", "marmellata", 
+            "succo", "sciroppo", "bevanda", "canditi", "brioche", "nutella", "caramello", 
+            "gelato", "dessert", "merendina"
     };
 
     async function init() {
