--- a/spesa/index.html
+++ b/spesa/index.html
@@ -185,7 +185,7 @@
     // --- MAPPA ALLERGENI ESTESA (IL CERVELLO DI SICUREZZA) ---
     const riskMap = {
         "Glutine": [
-            "pane", "pasta", "farina", "biscotti", "cereali", "orzo", "farro", "kamut", "seitan", 
+            "pane", "pasta", "farina", "biscotti", "cornetto", "brioche", "cereali", "orzo", "farro", "kamut", "seitan", 
             "pizza", "focaccia", "crostini", "pangrattato", "piadina", "malto", "segale", 
             "spaghetti", "penne", "fusilli", "rigatoni", "lasagne", "tortellini", "ravioli", 
             "couscous", "bulgur", "gnocchi", "tagliatelle", "pappardelle", "orecchiette", "cracker", "fette biscottate"
